# chriscarl.com

./: .gitignore  .pylintrc  README.md  TODO.md  angular-cli.json  pyproject.toml
chriscarl/: README.md  package-lock.json  package.json
chriscarl/e2e/: app.po.ts
chriscarl/src/: index.html
e2e/: app.e2e-spec.ts
scripts/: chriscarl.com  dsmlai.py  generate-favicon.ps1  ill-fated-cluster-analysis-w-agents.py  nginx.conf  parse-logs.py  pull-logs.ps1  push.ps1  setup.sh  svg-to-js-test.py
scripts/dsmlai/: NOTES.md  constants.py  dsmlai-insitu.ipynb  dsmlai.ipynb  step-1_pull-logs.py  step-2_process-logs-basic.py  step-3_process-logs-additional.py  step-4_process-logs-merge.py  step-5_process-logs-derive.py  step-6_process-logs-model-prep.py  step-7-train-kmeans-cluster.py  step-7.5-train-kmeans-cluster-overunder.py  step-8-train-decision-tree.py  step-8.5-train-decision-tree-less-features.py
scripts/parse-logs/: dates.py  parse-logs.py
src/: index.html  test.html
src/app/: app.module.ts
