[tool.poetry]
name = "chriscarl-com"
version = "0.0.0"
description = "Incredibly simple website that just gets the point across, but it DOES look cool."
authors = ["Chris Carl <chrisbcarl@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = []  # {include = "chriscarl"}


[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pandas = "^2.2.3"
selenium = "^4.29.0"
flask = "^3.1.0"
lxml = "^5.3.1"
requests = "^2.32.3"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
imblearn = "^0.0"
xgboost = "^2.1.4"
paramiko = "^3.5.1"
jupyterlab = "^4.3.6"
notebook = "^7.3.3"
ipywidgets = "^8.1.5"
ipympl = "^0.9.7"
werkzeug = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
